tests/baselines/reference/moduleKeywordRepeatError.errors.txt
==== tests/cases/compiler/moduleKeywordRepeatError.ts (2 errors) ====
    // "module.module { }" should raise a syntax error
    
    module.module { }
                  ~
!!! ';' expected.
    ~~~~~~
!!! Cannot find name 'module'.